# itba-cde-tpf-python-applications

./: README.md  docker-compose.yaml  pyproject.toml  setup.sh
.github/workflows/: python-app.yml
dags/: stocks_etl_dag.py
dags/utils/: config.py  postgresql_cli.py
tests/: conftest.py
tests/sql/: multiple_occurrences_check.sql
tests/test_dags/: test_get_daily_stock_data_json.py
